tests/ui/traits/const-traits/double-error-for-unimplemented-trait.stderr
error[E0277]: the trait bound `(): Trait` is not satisfied
  --> $DIR/double-error-for-unimplemented-trait.rs:13:15
   |
LL |   needs_const(&());
   |   ----------- ^^^ the trait `Trait` is not implemented for `()`
   |   |
   |   required by a bound introduced by this call
   |
help: this trait has no implementations, consider adding one
  --> $DIR/double-error-for-unimplemented-trait.rs:6:1
   |
LL | trait Trait {
   | ^^^^^^^^^^^
note: required by a bound in `needs_const`
  --> $DIR/double-error-for-unimplemented-trait.rs:10:25
   |
LL | const fn needs_const<T: [const] Trait>(_: &T) {}
   |                         ^^^^^^^^^^^^^ required by this bound in `needs_const`

error[E0277]: the trait bound `(): Trait` is not satisfied
  --> $DIR/double-error-for-unimplemented-trait.rs:18:15
   |
LL |   needs_const(&());
   |   ----------- ^^^ the trait `Trait` is not implemented for `()`
   |   |
   |   required by a bound introduced by this call
   |
help: this trait has no implementations, consider adding one
  --> $DIR/double-error-for-unimplemented-trait.rs:6:1
   |
LL | trait Trait {
   | ^^^^^^^^^^^
note: required by a bound in `needs_const`
  --> $DIR/double-error-for-unimplemented-trait.rs:10:25
   |
LL | const fn needs_const<T: [const] Trait>(_: &T) {}
   |                         ^^^^^^^^^^^^^ required by this bound in `needs_const`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
